# richtype

./: .gitignore  LICENSE  README.md  pyproject.toml
src/richtype/: __init__.py  cli.py  disclaimer.py
src/server/: main.py
