[project]
name = "richtype"
version = "0.1.0"
description = "A terminal typing-speed game built with rich."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "fastapi[standard]>=0.136.3",
    "readchar>=4.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]
[project.scripts]
richtype = "richtype:main"
[tool.uv]
package = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/richtype"]
